syntax = "proto3";

package bootstrap.conf;

option go_package = "fkratos/bootstrap/conf;conf";

// 业务
message Business {
  // jwt
  message Jwt {
    string accessSecret = 1;//秘钥
    int64 accessExpire = 2;//过期时间
    int64 refreshAfter = 3;//刷新时间 (大于刷新时间,而小于过期时间,则刷新Token)
    string issuer = 4;//签发人
  }
  Jwt jwt = 1;
}
